@@ -152,6 +152,7 @@
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Logging'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Mobile'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'CommandLine'.PATH_SEPARATOR
+		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Routers'.PATH_SEPARATOR
 		
 		.ONPHP_MAIN_PATH.'Messages'		.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Messages'.DIRECTORY_SEPARATOR.'Interface'.PATH_SEPARATOR
@@ -178,10 +179,6 @@
 		.'Application'.DIRECTORY_SEPARATOR
 		.'Markups'.DIRECTORY_SEPARATOR
 		.'Documents'.DIRECTORY_SEPARATOR.PATH_SEPARATOR
-		
-		.ONPHP_INCUBATOR_PATH
-		.'classes'.DIRECTORY_SEPARATOR
-		.'Routers'.DIRECTORY_SEPARATOR.PATH_SEPARATOR
 		
 		.ONPHP_INCUBATOR_PATH
 		.'classes'.DIRECTORY_SEPARATOR
