@@ -21,8 +21,8 @@
 		ONPHP_TEST_PATH.'main'.DIRECTORY_SEPARATOR,
 		ONPHP_TEST_PATH.'main'.DIRECTORY_SEPARATOR.'Ip'.DIRECTORY_SEPARATOR,
 		ONPHP_TEST_PATH.'main'.DIRECTORY_SEPARATOR.'Net'.DIRECTORY_SEPARATOR,
+		ONPHP_TEST_PATH.'main'.DIRECTORY_SEPARATOR.'Utils'.DIRECTORY_SEPARATOR.'Routers'.DIRECTORY_SEPARATOR,
 		//ONPHP_TEST_PATH.'incubator'.DIRECTORY_SEPARATOR,
-		//ONPHP_TEST_PATH.'incubator'.DIRECTORY_SEPARATOR.'Routers'.DIRECTORY_SEPARATOR,
 		//ONPHP_TEST_PATH.'incubator'.DIRECTORY_SEPARATOR.'TSearch'.DIRECTORY_SEPARATOR,
 		//ONPHP_TEST_PATH.'incubator'.DIRECTORY_SEPARATOR.'OQL2'.DIRECTORY_SEPARATOR,
 	);
