@@ -1,5 +1,10 @@
 # $Id$
 
+2009-04-05	Sergey S. Sergeev
+
+	* main/Utils/Routers, test/main/Utils/Routers: utils for rewriting 
+	urls moved from incubator.
+
 2009-04-04	Denis M. Gabaidulin
 
 	* main/Charts/Google. Google charts implementation(partically)
